# OscillatingRoot

./: .gitignore  pyproject.toml
scripts/: run_one.py
src/oscillating_root/: config.py  growth_helpers.py  io.py  metrics.py  model.py  state.py  viz.py
tests/: test_determinism.py  test_shapes.py
