[project]
name = "oscillating-root"
version = "0.1.0"
description = "A model of lateral root development that DEFINITELY oscillates"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pytest>=9.0.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
